<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/telefono_screen_bg"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/txt_splash_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/splash_title"
        android:textColor="@color/telefono_section_text"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_splash_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/splash_subtitle"
        android:textColor="@color/telefono_comment_text"
        android:textSize="20sp" />

    <ProgressBar
        android:id="@+id/progress_splash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:indeterminate="true" />

    <ImageView
        android:id="@+id/img_splash_logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="18dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/splash_image_desc"
        android:scaleType="fitCenter"
        android:src="@drawable/logo_servicoop_no_ofic" />

</LinearLayout>
